@@ -2,7 +2,7 @@ sg3-utils (1.26-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Mon, 14 Jan 2008 02:00:00 -0500
+ -- Doug Gilbert <dgilbert@interlog.com>  Tue, 15 Jan 2008 20:00:00 -0500
 
 sg3-utils (1.25-0.1) unstable; urgency=low
 
